fix for backdrop on iphone 8 and below

--- a/css/core.css
+++ b/css/core.css
@@ -226,6 +226,7 @@
     height: 100vh;
     background-color: var(--backdrop-bg-color);
     overflow: hidden;
+    pointer-events: none
   }
 
   .close {
